--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "aylien_textapi": "^0.7.0",
         "express": "^4.17.1",
         "webpack": "^4.41.4",
         "webpack-cli": "^3.3.10"
