--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "node src/server/index.js",
         "build": "webpack",
         "prod": "webpack --config webpack.prod.js",
@@ -28,6 +28,7 @@
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.4.0",
         "html-webpack-plugin": "^3.2.0",
+        "jest": "^24.9.0",
         "node-sass": "^4.13.0",
         "sass-loader": "^8.0.0",
         "style-loader": "^1.1.2",
