--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "valid-url": "^1.0.9",
         "webpack": "^4.41.4",
         "webpack-cli": "^3.3.10"
     },
