--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "node-sass": "^4.13.0",
         "sass-loader": "^8.0.0",
         "style-loader": "^1.1.2",
-        "webpack-dev-server": "^3.10.1"
+        "webpack-dev-server": "^3.10.1",
+        "workbox-webpack-plugin": "^4.3.1"
     }
 }
