--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.7.7",
+        "@babel/plugin-transform-runtime": "^7.7.6",
         "@babel/preset-env": "^7.7.7",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^3.0.0",
